--- a/Views/QuestionWindow.xaml
+++ b/Views/QuestionWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Analytik_Altfragengenerator"
         xmlns:ViewModels="clr-namespace:Analytik_Altfragengenerator.ViewModels" x:Class="Analytik_Altfragengenerator.MainWindow"
         mc:Ignorable="d"
-        Title="Analytik Fragen" Height="450" Width="800">
+        Title="Analytik Fragen" Height="500" Width="800" FontSize="14">
     <Window.DataContext>
         <ViewModels:QuestionViewModel/>
     </Window.DataContext>
@@ -15,7 +15,7 @@
             <RowDefinition Height="5*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBox Text="{Binding DisplayString, Mode=OneWay}"/>
+        <TextBox Text="{Binding DisplayString, Mode=OneWay}" FontSize="14"/>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
